# standard_django_template

./: .gitignore  README.md  manage.py  pyproject.toml
components/generic_templates/: base_forms_template.html  global_navbar.html  global_navbar_secondary.html  global_template.html
home/: forms.py  urls.py  views.py
home/templates/home/: home_index.html  profile.html
home/templates/registration/: login.html  password_change.html  register.html
standard_django_template/: asgi.py  settings.py  urls.py  wsgi.py
